Redid how HP bars are attached to objects, so that they have a useable reference they can issue calls to (such as a call to hide the bar).  Did a poor job of using this on the ninja kitty, which doesn't quite fit its behavior patterns.

--- a/data/objects/effects/attaches/hp_bar_attache.cfg
+++ b/data/objects/effects/attaches/hp_bar_attache.cfg
@@ -10,8 +10,23 @@
 
 
 	properties: {
+#-------------------------- effects attache overrides --------------------------#
+		do_setup: "[
+			initialize_position,
+			set(previous_hitpoints, _parent_obj.hitpoints),
+			bind_command(def() render_bar),
+		]",
+
+		/*
+			Some units, notably the ninja kitties, need to be able to hide their HP bars if they, themselves, are hiding.  It's a (hilarious) dead-giveaway of their position.
+		*/
+		turn_on: "commands :: set(alpha, 255)",
+		turn_off: "commands :: set(alpha, 0)",
+
+
+#-------------------------- core behavior --------------------------#
 		hitpoint_bar_width: "_parent_obj.physical_size",
-		relative_pos_default: "{ mid_x: 0, mid_y: _parent_obj.img_h * 0.60 }",
+		relative_pos_default: "{ mid_x: 0, mid_y: -(_parent_obj.img_h * 0.45) }",
 	
 		fraction_of_hitpoints: "decimal :: _parent_obj.hitpoints / decimal(_parent_obj.max_hitpoints)",
 		missing_fraction_of_hitpoints: "decimal :: 1.0 - fraction_of_hitpoints",
@@ -46,7 +61,7 @@
 				id: 'default', //The object must have a valid animation frame before it can be loaded. Using the id 'default' means that before on_load is fired, the default animation supplied for every object will be used.
 				image: 'fbo', 
 				pivot_origin: [0,0],
-				blend: ['src_color','one_minus_src_alpha'],
+				//blend: ['src_color','one_minus_src_alpha'],
 
 				fbo: c.render(bar_width,bar_height+1, (
 		
@@ -77,7 +92,6 @@
 			),
 		]",
 		
-		do_setup: "[set(previous_hitpoints, _parent_obj.hitpoints), bind_command(def() render_bar)]",
 	},
 
 	on_load: "do_setup",
