--- a/data/objects/enemies/milgramen/kitty_ninja.cfg
+++ b/data/objects/enemies/milgramen/kitty_ninja.cfg
@@ -64,7 +64,13 @@ properties: {
 
 	consider_strafe: "commands :: [if(1d5=5, do_strafe)]",
 
-	escape_to_start: "commands :: [set(_escape_counter, 0),set(_last_escape,cycle),animation('hide'), set(xy, [_init_x, _init_y])]",
+	escape_to_start: "commands :: [
+		set(_escape_counter, 0),
+		set(_last_escape,cycle),
+		animation('hide'),
+		set(xy, [_init_x, _init_y]),
+		hp_bar_obj.turn_off,
+	]",
 
 	consider_escape: "commands :: if(_escape_counter < 8,
 										[
@@ -77,17 +83,20 @@ properties: {
 										]
 									)",
 
-	choose_action: "commands :: if(facing !=desired_facing,
-									[animation('turn'), set(facing, desired_facing)], 
-									if(player_too_close, jump_back,
-										if(player_in_attack_area, begin_attack, 
-											if(is_shuriken_usable,
-												switch(1d3, 1,consider_shuriken, 2, consider_strafe, 3, consider_escape ),
-												consider_escape
-											)
-										)
-									)
-								)",
+	choose_action: "commands :: [
+		if(facing !=desired_facing,
+			[animation('turn'), set(facing, desired_facing)], 
+			if(player_too_close, jump_back,
+				if(player_in_attack_area, begin_attack, 
+					if(is_shuriken_usable,
+						switch(1d3, 1,consider_shuriken, 2, consider_strafe, 3, consider_escape ),
+						consider_escape
+					)
+				)
+			)
+		),
+		schedule(1, bind_command(def() if(animation != 'hide',	hp_bar_obj.turn_on))), //scheduling because at the time of execution, the animation will still be 'hide'.  If we don't do this, these will always be a full action late.
+	]",
 
 #-------------------------- vars --------------------------#
 	_init_x: { type: "int", init: "x", persistent: false },
