--- a/data/object_prototypes/base/hittable.cfg
+++ b/data/object_prototypes/base/hittable.cfg
@@ -155,9 +155,18 @@ properties: {
 	
 		#-- tools for managing the miniature hitpoint bars --#
 	has_mini_hp_bar: "bool :: if(is_a_boss, false, true)",
-	attach_mini_hp_bar:	"commands :: if(has_mini_hp_bar, spawn('hp_bar_attache', mid_x, mid_y, {facing: 1, parent: me, relative_x: 0, relative_y: - 30, time_to_die: 00}))",
-	
-	
+	attach_mini_hp_bar:	"commands :: if(has_mini_hp_bar, add_object(hp_bar_obj) )",
+	hp_bar_obj: {
+		type: "obj hp_bar_attache", 
+		init: "object('hp_bar_attache', mid_x, mid_y, {
+			facing: 1,
+			parent: me,
+			time_to_die: 0,
+//			custom_relative_pos_default: {mid_x: 0, mid_y: -30},
+		})",
+		persistent: false,
+		variable_name: 'hp_bar_obj',
+	},	
 	
 	
 	
