Did a much better handling of ninja kitties hiding their HP bars as-appropriate.  Also enhanced them to aggro if they take damage whilst hidden, rather than just sitting there and letting you kill them outright.

--- a/data/objects/enemies/milgramen/kitty_ninja.cfg
+++ b/data/objects/enemies/milgramen/kitty_ninja.cfg
@@ -32,37 +32,47 @@ properties: {
 	consider_shuriken: "commands :: [if((cycle-_last_toss) > 100, animation('shurikenPrep'))]",
 
 	fire_shuriken: "commands :: [
-									animation('shurikenFire'),
-									play_sound__falloff('weapon-swing-lighter'),
-									[
-										set(_last_toss,cycle),
-										spawn('kitty_ninja.shuriken', mid_x+20*facing, mid_y, {
-											facing: facing,
-											velocity_x: 800*x_mag,
-											velocity_y: 800*y_mag
-										})
-									] 
-										where x_mag = decimal(level.player.mid_x - mid_x)/length
-										where y_mag = decimal(level.player.mid_y - mid_y)/length
-								]
-									where length = abs(sqrt( (level.player.mid_x - mid_x)^2 + (level.player.mid_y - mid_y)^2))",
+		animation('shurikenFire'),
+		play_sound__falloff('weapon-swing-lighter'),
+		hp_bar_obj.turn_on,		
+		[
+			set(_last_toss,cycle),
+			spawn('kitty_ninja.shuriken', mid_x+20*facing, mid_y, {
+				facing: facing,
+				velocity_x: 800*x_mag,
+				velocity_y: 800*y_mag
+			})
+		] 
+			where x_mag = decimal(level.player.mid_x - mid_x)/length
+			where y_mag = decimal(level.player.mid_y - mid_y)/length
+	]
+		where length = abs(sqrt( (level.player.mid_x - mid_x)^2 + (level.player.mid_y - mid_y)^2))",
 
 	player_too_close: "bool :: (abs(level.player.mid_y - mid_y) < 150 and abs(level.player.mid_x - mid_x) < 150)",
 	
-	begin_attack: "commands :: animation('dash')",
+	begin_attack: "commands :: [
+		animation('dash'),
+		hp_bar_obj.turn_on,		
+	]",
 
 	jump_back: "commands :: [
-								add(velocity_y, -1000-1d400),
-								add(velocity_x, -(1000+1d400)*facing),
-								animation('jumpback')
-							]",
+		add(velocity_y, -1000-1d400),
+		add(velocity_x, -(1000+1d400)*facing),
+		animation('jumpback'),
+		hp_bar_obj.turn_on,		
+	]",
 
 	do_strafe: "commands :: [
-								animation('stand'),
-								if(1d2=2, add(velocity_x,-1000-1d500), add(velocity_x,1000+1d500))
-							]",
+		animation('stand'),
+		if(1d2=2, add(velocity_x,-1000-1d500), add(velocity_x,1000+1d500)),
+		hp_bar_obj.turn_on,		
+	]",
 
-	consider_strafe: "commands :: [if(1d5=5, do_strafe)]",
+	consider_strafe: "commands :: 
+		if(1d5=5, [
+			do_strafe,
+			hp_bar_obj.turn_on,
+		])",
 
 	escape_to_start: "commands :: [
 		set(_escape_counter, 0),
@@ -73,19 +83,23 @@ properties: {
 	]",
 
 	consider_escape: "commands :: if(_escape_counter < 8,
-										[
-											add(_escape_counter, 1),
-											if(not animation in ['stand'],animation('stand'))
-										],
-										[
-											animation('smokebomb'),
-											schedule(10, play_sound__falloff('smoke-bomb-throw', {max_volume: 0.6}))
-										]
-									)",
+		[
+			add(_escape_counter, 1),
+			if(not animation in ['stand'],animation('stand'))
+		],
+		[
+			animation('smokebomb'),
+			schedule(10, play_sound__falloff('smoke-bomb-throw', {max_volume: 0.6}))
+		]
+	)",
 
 	choose_action: "commands :: [
 		if(facing !=desired_facing,
-			[animation('turn'), set(facing, desired_facing)], 
+			[
+				animation('turn'),
+				set(facing, desired_facing),
+				hp_bar_obj.turn_on,		
+			], 
 			if(player_too_close, jump_back,
 				if(player_in_attack_area, begin_attack, 
 					if(is_shuriken_usable,
@@ -95,8 +109,18 @@ properties: {
 				)
 			)
 		),
-		schedule(1, bind_command(def() if(animation != 'hide',	hp_bar_obj.turn_on))), //scheduling because at the time of execution, the animation will still be 'hide'.  If we don't do this, these will always be a full action late.
 	]",
+
+	/*
+		If we don't do *something* upon taking damage, the hidden kitty will literally just stand there and take it, letting you 100->0 them without retaliation.
+	*/
+	handle_special_damage_response: "def(DamageType damage_type, int final_damage_amount, bool will_die) -> commands 
+		execute(me,
+			if(animation = 'hide',
+				if(1d2=2, jump_back, do_strafe)
+			)
+		)", 
+
 
 #-------------------------- vars --------------------------#
 	_init_x: { type: "int", init: "x", persistent: false },
