--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1308,9 +1308,9 @@ properties: {
 		]
 	", 
 
-	fade_out_hud: "[animate(c, { scale: 0 }, { duration: 1, easing: lib.math.ease_in_out_cubic }) 
+	fade_out_hud: "[animate(c, { alpha: 0, scale: 1.0/level.zoom }, { duration: 10, easing: lib.math.ease_in_out_cubic }) 
 		| c <- level.chars, c.use_absolute_screen_coordinates]",
-	fade_in_hud:  "[animate(c, { scale: 1 }, { duration: 1, easing: lib.math.ease_in_out_cubic }) 
+	fade_in_hud:  "[animate(c, { alpha: 255, scale: 1 }, { duration: 20, easing: lib.math.ease_in_out_cubic }) 
 		| c <- level.chars, c.use_absolute_screen_coordinates]",
 
 
