Reimplemented the heart display as objects.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1235,7 +1235,7 @@ properties: {
 	
 	gui_heart_display: {
 		type: "obj heart_display", 
-		init: "object('heart_display', 27 + 108, 27+8, {})", //27 is offset for some sort of interaction with the default animation, object positioning, etc.
+		init: "object('heart_display', {mid_x: 18 + 108, mid_y: 24})", //27 is offset for some sort of interaction with the default animation, object positioning, etc.
 		persistent: false,
 	},
 	gui_ability_display: {
@@ -1308,7 +1308,7 @@ properties: {
 		]
 	", 
 
-	fade_out_hud: "[animate(c, { alpha: 0, scale: 1.0/level.zoom }, { duration: 10, easing: lib.math.ease_in_out_cubic }) 
+	fade_out_hud: "[animate(c, { alpha: 0, scale: 1.0/(level.zoom * 2) }, { duration: 10, easing: lib.math.ease_in_out_cubic }) 
 		| c <- level.chars, c.use_absolute_screen_coordinates]",
 	fade_in_hud:  "[animate(c, { alpha: 255, scale: 1 }, { duration: 20, easing: lib.math.ease_in_out_cubic }) 
 		| c <- level.chars, c.use_absolute_screen_coordinates]",
