--- a/data/objects/gui-components/hud-components/heart_display.cfg
+++ b/data/objects/gui-components/hud-components/heart_display.cfg
@@ -24,9 +24,68 @@
 		
 		last_displayed_hitpoints: { type: "int", default: -1 },
 		last_displayed_max_hitpoints: { type: "int", default: -1 },
+		
+		heart_objects_for_current_hp: "[obj heart_display.icon] :: 
+			map( range(num_full),
+				/*
+					Draw the full hearts.
+				*/
+				object('heart_display.icon', {
+					relative_x: d_mod(value , row_width) * heart_width, 
+					relative_y: floor(value / row_width) * heart_height,
+					animation: 'normal',
+					parent: me,
+				})
+			)
+			+
+			map(range(num_half),
+				/*
+					The half-heart. Still mapped even though there's only ever 0 or 1 because it makes the code parallel to the full and empty heart cases.
+				*/
+				object('heart_display.icon', {
+					relative_x: d_mod((num_full + value) , row_width) * heart_width, 
+					relative_y: floor((num_full + value) / row_width) * heart_height,
+					animation: 'half', 
+					parent: me,
+				})
+			)
+			+
+			map(range(num_empty),
+				/*
+					The trailing set of empty heart containers.
+				*/
+				object('heart_display.icon', {
+					relative_x: d_mod((num_full + num_half + value) , row_width) * heart_width, 
+					relative_y: floor((num_full + num_half + value) / row_width) * heart_height,
+					animation: 'empty', 
+					parent: me,
+				})
+			)
+		 
+			where num_empty = (target.max_hitpoints - target_hp) / 2
+			where num_full = target_hp / 2
+			where num_half = target_hp % 2
+			where d_mod = lib.math.decimal_mod,
+		",
+		
+		_active_child_hearts: { type: "[obj heart_display.icon]", persistent: false, default: [] },
 	},
 	
-	on_process: "if(last_displayed_hitpoints != target.hitpoints or last_displayed_max_hitpoints != target.max_hitpoints, [ //Only set the widgets if something has changed.
+	on_process: "if(last_displayed_hitpoints != target.hitpoints or last_displayed_max_hitpoints != target.max_hitpoints, [
+		/*
+			Only change the objects if the actual HP has changed, otherwise we'll be churning this every frame
+		*/
+		set(last_displayed_hitpoints, target.hitpoints),
+		set(last_displayed_max_hitpoints, target.max_hitpoints),
+		map(_active_child_hearts, remove_object(value)),
+		;
+		set(_active_child_hearts, heart_objects_for_current_hp)
+		;
+		map(_active_child_hearts, add_object(value)),
+	])",
+
+	
+/*	on_process: "if(last_displayed_hitpoints != target.hitpoints or last_displayed_max_hitpoints != target.max_hitpoints, [ //Only set the widgets if something has changed.
 		set(last_displayed_hitpoints, target.hitpoints),
 		set(last_displayed_max_hitpoints, target.max_hitpoints),
 		
@@ -57,45 +116,34 @@
 		where num_full = target_hp / 2
 		where num_half = target_hp % 2
 		where d_mod = lib.math.decimal_mod,
-	])"
+	])"*/
+	
+	
+	object_type: [{
+		id: "icon",
+		always_active: true,
+		use_absolute_screen_coordinates: true,
+		serializable: false,
+		zorder: "@include data/zorder.cfg:in_front_of_everything",
+		
+		
+		animation: [{
+			"@base": true,
+			no_remove_alpha_borders: true,
+			image: 'gui/hud3.png', 
+			frames: 1,
+			duration: -1,
+		},{
+			id: "normal",
+			rect: [33,49,49,65],
+		},{
+			id: "half",
+			rect: [52,49,68,65],
+		},{
+			id: "empty",
+			rect: [71,49,87,65],
+		}],
+	}]
+
 }
 
-/* 
-	This file is a port of the following code from hud.cfg, which was removed
-	because it was not as flexible as we had wanted. It has been reindented and
-	cleaned up as part of the process of understanding it so it could be moved.
-	
-	//// Display the rows of hearts. First, the whole hearts, then empty hearts, then the half-heart if needed.
-	([	map(range( ceil(max_HP/decimal(hearts_per_row * hp_per_heart))), 'row_index',
-			slice(
-				map(range(hearts_per_row), 'index', 
-					draw_animation('heart_full', x_offset+x_width*index, y_offset+y_height*row_index)),
-				0, 
-				max(0, min(hearts_per_row, cur_HP/hp_per_heart - hearts_per_row*row_index))
-			)
-		),
-
-		map(range(ceil(max_HP/decimal(hearts_per_row * hp_per_heart))), 'row_index',
-			slice(
-				map(range(hearts_per_row), 'index', 
-					draw_animation('heart_empty', x_offset+x_width*index, y_offset+y_height*row_index)),
-				max(0, min(hearts_per_row, (cur_HP)/hp_per_heart - hearts_per_row*row_index)), 
-				min(hearts_per_row, ceil((max_HP)/decimal(hp_per_heart)) - hearts_per_row*row_index)
-			)
-		),
-		
-		if(cur_HP > 0 and cur_HP%hp_per_heart,
-			map(range(hearts_per_row), 'index', 
-				draw_animation('heart_half', x_offset+x_width*index, y_offset+y_height*row_index)
-			)[cur_HP/hp_per_heart - row_index*(hearts_per_row)]
-		) where row_index = cur_HP/(hearts_per_row * hp_per_heart)
-	] where x_offset = 10,
-	        y_offset = 52,
-	        x_width = 32,
-	        y_height = 32,
-	        hp_per_heart = 2,
-	        hearts_per_row = 5, //was 10
-	        ceil = lib.math.ceil,
-	        max_HP = level.local_player and level.local_player.max_hitpoints or 0,
-	        cur_HP = level.local_player and level.local_player.hitpoints or 0 ),
-*/
