Setup a formal, hardcoded list of levels we just don't show the HUD on.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1649,7 +1649,15 @@ on_draw: "[
 			fade_in_hud, 
 			fade_out_hud ) ),
 	set(_should_display_hud, should_display_hud_now),
-] where should_display_hud_now = (level.zoom_current = 1)",
+] where should_display_hud_now = (level.zoom_current = 1) and (not level.id in [
+	'titlescreen.cfg',
+	'titlescreen-new-game-selector.cfg',
+	'inventory-screen.cfg',
+	'main-map.cfg',
+	'titlescreen-arcade.cfg',
+	'titlescreen-load-game-selector.cfg',
+	'tea-with-milgram.cfg',
+])",
 
 on_process_start_jump: "[set_aerial_rotation(-2)]",
 	
