Eliminated some old cruft from the prior gui port, and changed the mana bar's back to being an object instead of a widget.  Also changed the variable names for the top and bottom caps of the mana bar to actually be that, instead of being left and right.

--- a/data/objects/gui-components/hud-components/mana_display.cfg
+++ b/data/objects/gui-components/hud-components/mana_display.cfg
@@ -18,44 +18,44 @@
 		mana_bar_length: "int :: round(((mana_bar_max_length - mana_bar_cap_width) * target.mana) / target.max_mana)",
 	
 		mana_bar_container: {
-			type: "widget", 
-			init: "widget(me, {
-				type: 'image',
-				image: 'gui/hud3.png',
-				area: [5,28,26,93],
-			})",
+			type: "obj mana_display.bar_container",
+			init: "object('mana_display.bar_container', {x: me.x, y: me.y})",
 		},
-		
 		mana_bar_center: {
 			type: "obj mana_display.bar_center",
 			init: "object('mana_display.bar_center', x,y,1)",
 		},
-		mana_bar_left: {
-			type: "obj mana_display.left_cap",
-			init: "object('mana_display.left_cap', x,y,1)",
+		mana_bar_top: {
+			type: "obj mana_display.top_cap",
+			init: "object('mana_display.top_cap', x,y,1)",
 		},
-		mana_bar_right: {
-			type: "obj mana_display.right_cap",
-			init: "object('mana_display.right_cap', x,y,1)",
+		mana_bar_bottom: {
+			type: "obj mana_display.bottom_cap",
+			init: "object('mana_display.bottom_cap', x,y,1)",
 		}
 	},
 	
-	on_start_level: "[add_object(mana_bar_center), add_object(mana_bar_left), add_object(mana_bar_right)]",
-	on_create: "[
+	on_start_level: "[
+		add_object(mana_bar_container),
 		add_object(mana_bar_center),
-		add_object(mana_bar_left),
-		add_object(mana_bar_right),
-		set(me.widgets.child, mana_bar_container),
+		add_object(mana_bar_top),
+		add_object(mana_bar_bottom),
+	]",
+	on_create: "[
+		add_object(mana_bar_container),
+		add_object(mana_bar_center),
+		add_object(mana_bar_top),
+		add_object(mana_bar_bottom),
 	]",
 	
 	on_process: "[
 		[
-			set(mana_bar_left.x, x_offset), set(mana_bar_left.y, y_offset),
-			set(mana_bar_right.x, x_offset ), set(mana_bar_right.y, y_offset+ mana_bar_length+4),
+			set(mana_bar_top.x, x_offset), set(mana_bar_top.y, y_offset),
+			set(mana_bar_bottom.x, x_offset ), set(mana_bar_bottom.y, y_offset+ mana_bar_length+4),
 			if(mana_bar_length > 5, 
-				[set(mana_bar_left.alpha,255), set(mana_bar_right.alpha,255), set(mana_bar_center.alpha,255), 
+				[set(mana_bar_top.alpha,255), set(mana_bar_bottom.alpha,255), set(mana_bar_center.alpha,255), 
 					mana_bar_center.set_draw_params( x_offset, y_offset+10, mana_bar_length-4)],
-				[set(mana_bar_left.alpha,0), set(mana_bar_right.alpha,0), set(mana_bar_center.alpha,0)]
+				[set(mana_bar_top.alpha,0), set(mana_bar_bottom.alpha,0), set(mana_bar_center.alpha,0)]
 			)
 		] where x_offset = me.x+4 where y_offset = me.y-2, //42
 	]",
@@ -69,6 +69,16 @@
 			is_strict: true,
 			use_absolute_screen_coordinates: true,
 		},
+		{
+			id: "bar_container",	
+			zsub_order: 0,
+				
+			animation: {
+				id:	'normal',
+				image: 'gui/hud3.png',
+				rect: [5,28,26,93], 
+			},
+		},		
 		{
 			id: "bar_center",
 			properties: {
@@ -89,34 +99,22 @@
 				rect: [0,0,17,31], 
 			},
 		},{
-			id: "right_cap",
+			id: "top_cap",
+
+			animation: {
+				id:	'normal',
+				image: 'gui/hud3.png',
+				rect: [0,0,17,7],
+			},
+		},{
+			id: "bottom_cap",
 
 			animation: {
 				id:	'normal',
 				image: 'gui/hud3.png',
 				rect: [0,8,17,15], 
 			},
-		},{
-			id: "left_cap",
-
-			animation: {
-				id:	'normal',
-				image: 'gui/hud3.png',
-				rect: [0,0,17,7], 
-			},
-	}],
+		},
+	],
 	
 }
-
-/* PREVIOUSLY, IN hud.cfg:
-	//// The blue mana-bar.		                 
-	draw_animation('manabar_empty', 48, 32),
-	if(level.local_player and level.local_player.mana > 0, ([
-		draw_animation('charge_bar_left', x_offset, y_offset),
-		draw_animation('charge_bar_right', x_offset + barLength*2, y_offset),
-		if(barLength > 5, draw_animation_area('charge_bar_center', x_offset+10, y_offset, barLength-5))
-	] where x_offset = 52, 
-	        y_offset = 32,
-	        barLength = int((fullBarLength*level.local_player.mana)/level.local_player.max_mana))
-	  where fullBarLength = 114 ),
-*/
