Put in more graceful hiding for the mana bar, when animating the hiding of the HUD.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1308,11 +1308,29 @@ properties: {
 		]
 	", 
 
-	fade_out_hud: "[animate(c, { alpha: 0, scale: 1.0/(level.zoom * 2) }, { duration: 10, easing: lib.math.ease_in_out_cubic }) 
-		| c <- level.chars, c.use_absolute_screen_coordinates]",
-	fade_in_hud:  "[animate(c, { alpha: 255, scale: 1 }, { duration: 20, easing: lib.math.ease_in_out_cubic }) 
-		| c <- level.chars, c.use_absolute_screen_coordinates]",
+	fade_out_hud: "[
+		[
+			animate(c, { alpha: 0, scale: 1.0/(level.zoom * 2) }, { duration: 10, easing: lib.math.ease_in_out_cubic }) 
+			| c <- level.chars, (c.use_absolute_screen_coordinates and (not c.type in hud_types_omitted_from_scaling))
+		],
+		[
+			animate(c, { alpha: 0 }, { duration: 5, easing: lib.math.ease_in_out_cubic }) 
+			| c <- level.chars, (c.use_absolute_screen_coordinates and (c.type in hud_types_omitted_from_scaling))
+		],
+		
+	]",
+	fade_in_hud:  "commands :: [
+		[
+			animate(c, { alpha: 255, scale: 1 }, { duration: 20, easing: lib.math.ease_in_out_cubic }) 
+			| c <- level.chars, (c.use_absolute_screen_coordinates and (not c.type in hud_types_omitted_from_scaling))
+		],
+		[
+			animate(c, { alpha: 255 }, { duration: 20, easing: lib.math.ease_in_out_cubic }) 
+			| c <- level.chars, (c.use_absolute_screen_coordinates and (c.type in hud_types_omitted_from_scaling))
+		],
+	]",
 
+	hud_types_omitted_from_scaling: "[string] :: ['mana_display.bar_container', 'mana_display.bar_center', 'mana_display.bar_center', 'mana_display.bar_center']",
 
 #-------------------------- death-tracking --------------------------#
 
