--- a/data/objects/gui-components/hud-components/mana_display.cfg
+++ b/data/objects/gui-components/hud-components/mana_display.cfg
@@ -53,9 +53,17 @@
 			set(mana_bar_top.x, x_offset), set(mana_bar_top.y, y_offset),
 			set(mana_bar_bottom.x, x_offset ), set(mana_bar_bottom.y, y_offset+ mana_bar_length+4),
 			if(mana_bar_length > 5, 
-				[set(mana_bar_top.alpha,255), set(mana_bar_bottom.alpha,255), set(mana_bar_center.alpha,255), 
-					mana_bar_center.set_draw_params( x_offset, y_offset+10, mana_bar_length-4)],
-				[set(mana_bar_top.alpha,0), set(mana_bar_bottom.alpha,0), set(mana_bar_center.alpha,0)]
+				[
+					add_object(mana_bar_center),
+					add_object(mana_bar_top),
+					add_object(mana_bar_bottom),
+					mana_bar_center.set_draw_params( x_offset, y_offset+10, mana_bar_length-4)
+				],
+				[
+					remove_object(mana_bar_center),
+					remove_object(mana_bar_top),
+					remove_object(mana_bar_bottom),
+				]
 			)
 		] where x_offset = me.x+4 where y_offset = me.y-2, //42
 	]",
