Fixed an issue where the heart display wasn't rebuilding on level transitions.

--- a/data/objects/gui-components/hud-components/heart_display.cfg
+++ b/data/objects/gui-components/hud-components/heart_display.cfg
@@ -69,22 +69,28 @@
 		",
 		
 		_active_child_hearts: { type: "[obj heart_display.icon]", persistent: false, default: [] },
+		
+		update_display: "[
+			set(last_displayed_hitpoints, target.hitpoints),
+			set(last_displayed_max_hitpoints, target.max_hitpoints),
+			map(_active_child_hearts, remove_object(value)),
+			;
+			set(_active_child_hearts, heart_objects_for_current_hp)
+			;
+			map(_active_child_hearts, add_object(value)),
+		]",
 	},
 	
-	on_process: "if(last_displayed_hitpoints != target.hitpoints or last_displayed_max_hitpoints != target.max_hitpoints, [
+	on_process: "if(last_displayed_hitpoints != target.hitpoints or last_displayed_max_hitpoints != target.max_hitpoints, 
 		/*
 			Only change the objects if the actual HP has changed, otherwise we'll be churning this every frame
 		*/
-		set(last_displayed_hitpoints, target.hitpoints),
-		set(last_displayed_max_hitpoints, target.max_hitpoints),
-		map(_active_child_hearts, remove_object(value)),
-		;
-		set(_active_child_hearts, heart_objects_for_current_hp)
-		;
-		map(_active_child_hearts, add_object(value)),
-	])",
+		update_display
+	)",
 
-	
+	on_start_level: "[
+		update_display
+	]",	
 	
 	
 	object_type: [{
