Fixed a bunch of major issues related to hiding/showing the HUD at the start of playing a level.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1319,6 +1319,19 @@ properties: {
 		],
 		
 	]",
+	
+	instantly_hide_hud: "[
+		[
+			[set(c.alpha, 0), set(c.scale, 0)]
+			| c <- level.chars, (c.use_absolute_screen_coordinates and (not c.type in hud_types_omitted_from_scaling))
+		],
+		[
+			[set(c.alpha, 0)]
+			| c <- level.chars, (c.use_absolute_screen_coordinates and (c.type in hud_types_omitted_from_scaling))
+		],
+	]",
+	
+	
 	fade_in_hud:  "commands :: [
 		[
 			animate(c, { alpha: 255, scale: 1 }, { duration: 20, easing: lib.math.ease_in_out_cubic }) 
@@ -1329,6 +1342,18 @@ properties: {
 			| c <- level.chars, (c.use_absolute_screen_coordinates and (c.type in hud_types_omitted_from_scaling))
 		],
 	]",
+	
+	instantly_show_hud:  "commands :: [
+		[
+			[set(c.alpha, 255), set(c.scale, 1)]
+			| c <- level.chars, (c.use_absolute_screen_coordinates and (not c.type in hud_types_omitted_from_scaling))
+		],
+		[
+			[set(c.alpha, 255)]
+			| c <- level.chars, (c.use_absolute_screen_coordinates and (c.type in hud_types_omitted_from_scaling))
+		],
+	]",
+
 
 	hud_types_omitted_from_scaling: "[string] :: ['mana_display.bar_container', 'mana_display.bar_center', 'mana_display.bar_center', 'mana_display.bar_center']",
 
@@ -1662,10 +1687,16 @@ on_process: "[
 ]",
 
 on_draw: "[
-	if(_should_display_hud != should_display_hud_now, 
+	if((_should_display_hud != should_display_hud_now) or (level.cycle < 20),
+		/*
+			Note a dependency here — to keep this from getting weird, the transitions need to be instant if we're at the launch of a level.  The fade-in animation for these is longer than the fade-out, so if a fade-in and a fade-out get triggered back-to-back, the fade-in's final effects will take precedence, which means the gui won't actually hide (since the final state applied will be the final frame of the longer-animation).  TODO:  This was noted to happen a few times on cutscenes at the start of a level, but if we continue to have problems with this, then we should probably 'pad' the fade-out animation with a secondary animation that just sets a constant value of 0, for 15 cycles after the actual one plays.
+		*/
+	
 		if(should_display_hud_now, 
-			fade_in_hud, 
-			fade_out_hud ) ),
+			if(level.cycle < 19, instantly_show_hud, fade_in_hud),
+			if(level.cycle < 19, instantly_hide_hud, fade_out_hud)
+		)
+	),
 	set(_should_display_hud, should_display_hud_now),
 ] where should_display_hud_now = (level.zoom_current = 1) and (not level.id in [
 	'titlescreen.cfg',
