Several zordering tweaks to the HUD.

--- a/data/objects/gui-components/hud-components/heart_display.cfg
+++ b/data/objects/gui-components/hud-components/heart_display.cfg
@@ -103,6 +103,7 @@
 		use_absolute_screen_coordinates: true,
 		serializable: false,
 		zorder: "@include data/zorder.cfg:in_front_of_everything",
+		zsub_order: -10,
 		
 		
 		animation: [{
