Attach frames to the ability icons when you toggle abilities.

--- a/data/objects/gui-components/hud-components/ability_secondary_display.cfg
+++ b/data/objects/gui-components/hud-components/ability_secondary_display.cfg
@@ -152,7 +152,33 @@
 				"@base": true,
 				image: "gui/hud4.png",
 			}],
+
+			properties: {
+				frame: {
+					type: "obj ability_secondary_display.frame",  
+					init: "object('ability_secondary_display.frame',0,0,1, {parent: me})",
+				},
+			},
+
+			on_create: "add_object(frame)",
+			on_being_removed: "remove_object(frame)",
 		},
+
+		{
+			id: "frame",
+			is_strict: true,
+			use_absolute_screen_coordinates: true,
+			serializable: false,
+			zorder: "@include data/zorder.cfg:in_front_of_everything",
+			zsub_order: 0,
+			
+			animation: [{
+				id: "normal",
+				image: "gui/hud3.png",
+				rect: [80,0,127,47],
+			}],
+		},
+
 
 		{
 			id: "overlay",
