--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1255,22 +1255,7 @@ properties: {
 	},
 	gui_mana_display: {
 		type: "obj mana_display", 
-		init: "object('mana_display', 27+26, 27 + 84 + 110, {})",
-		persistent: false,
-	},
-	gui_score_display: {
-		type: "obj number_display", 
-		init: "object('number_display', 27+48+8, 27+10+2, {field: 'score', prefix: ~score: ~})",
-		persistent: false,
-	},
-	gui_highest_score_display: {
-		type: "obj number_display", 
-		init: "object('number_display', 27+48+80, 27+10+2, {field: 'high_score', prefix: ~best: ~})",
-		persistent: false,
-	},
-	gui_coins_display: {
-		type: "obj number_display", 
-		init: "object('number_display', 27+48+8, 27+10+2, {field: 'coins', prefix: ~$~})", //8, center the text a bit, not in the original ui. Rest is magic centering numbers.
+		init: "object('mana_display', 27+26, 27 + 96 + if(should_display_secondary_abilities, 98, 0), {})",
 		persistent: false,
 	},
 	gui_boss_progress_display: {
@@ -1283,6 +1268,25 @@ properties: {
 		init: "object('hud_gold_display', 0, 0, {x:screen_w - 66*2,y:50}) where screen_w = level.camera_position[2]",
 		persistent: false,
 	},
+	
+		// deprecated components {
+	gui_coins_display: {
+		type: "obj number_display", 
+		init: "object('number_display', 27+48+8, 27+10+2, {field: 'coins', prefix: ~$~})", //8, center the text a bit, not in the original ui. Rest is magic centering numbers.
+		persistent: false,
+	},
+	gui_score_display: {
+		type: "obj number_display", 
+		init: "object('number_display', 27+48+8, 27+10+2, {field: 'score', prefix: ~score: ~})",
+		persistent: false,
+	},
+	gui_highest_score_display: {
+		type: "obj number_display", 
+		init: "object('number_display', 27+48+80, 27+10+2, {field: 'high_score', prefix: ~best: ~})",
+		persistent: false,
+	},
+		// } deprecated components
+	
 	set_up_gui: "def() -> commands [
 		tear_down_gui(), //The set-up event is fired twice in some cases. In that case; simply resetup the gui.
 		
@@ -1292,14 +1296,28 @@ properties: {
 				add_object(gui_element),
 			]
 		) where components = {
-			default: [gui_gold_display, gui_heart_display, gui_ability_display, gui_secondary_ability_display, gui_mana_display, gui_boss_progress_display, gui_death_indicator_display]
-				+ if(not not find(level.active_chars, value.type in ['level_controller_neverending', 'level_controller_neverending_vertical']), //Test if we're on a score-based arcade level.
+			default: [
+				gui_gold_display,
+				gui_heart_display,
+				gui_ability_display,
+				gui_mana_display,
+				gui_boss_progress_display,
+				gui_death_indicator_display
+			]
+			+
+			if(should_display_secondary_abilities, [gui_secondary_ability_display], [])
+			+
+			if(not not find(level.active_chars, value.type in ['level_controller_neverending', 'level_controller_neverending_vertical']), //Test if we're on a score-based arcade level.
 					[gui_score_display, gui_highest_score_display], //Arcade displays score/best score,
-					[/*gui_coins_display*/]), //but normal play just displays coins got, unless we're on the coin arcade level.
+					[/*gui_coins_display*/]), //but normal play used to replace this with the old coin indicator, which took up the same real estate on the screen.  We kept the coin indicator on the coin arcade level.
 			ipad_2d: [/*mobile controls here*/],
 			iphone_2d: [],
 		},
 	]",
+	
+	should_display_secondary_abilities: "bool :: size(secondary_item_list) > 0",
+
+
 		
 	tear_down_gui: "def() -> commands
 		[gui_boss_progress_display.reset_boss_list,
